Notebook: Hyperparameters tuning sections with the grid search

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1589,9 +1589,7 @@
     "I have to assume the pool sizes are +/- the same in all the rounds. In practice, during the bear market the pools are almost empty, and during the bull market people tend to bet more, which is better for us. That's why I have selected relatively short time periods for the data sets.\n",
     "\n",
     "There are 6 hyperparameters to tune in total for 2 different feature sets.\n",
-    "To save some time I will use random search instead of grid search.\n",
-    "\n",
-    "Train_df will be used to train the models, validate_df to check the performance of the tuned models (hyperparameter tuning) and the final performance will be checked with an independent test_df"
+    "To save some time I will use random search instead of grid search.\n"
    ]
   },
   {
@@ -1602,6 +1600,101 @@
     "- https://otexts.com/fpp3/tscv.html\n",
     "- https://medium.com/@soumyachess1496/cross-validation-in-time-series-566ae4981ce4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "\n",
+    "def generate_svc_classifiers(model_param_grid):\n",
+    "    classifiers = []\n",
+    "    \n",
+    "    # Generate all combinations of parameters\n",
+    "    for C, gamma, kernel in product(model_param_grid['C'], model_param_grid['gamma'], model_param_grid['kernel']):\n",
+    "        classifier = SVC(C=C, gamma=gamma, kernel=kernel, probability=True)\n",
+    "        classifiers.append(classifier)\n",
+    "    \n",
+    "    return classifiers\n",
+    "\n",
+    "def check_grid(model_param_grid, simulator_param_grid, merged_train_df, cols_to_leave, amount_data_df):\n",
+    "    # Calculate total number of combinations\n",
+    "    model_combinations = len(list(product(*model_param_grid.values())))\n",
+    "    simulator_combinations = len(list(product(*simulator_param_grid.values())))\n",
+    "    \n",
+    "    total_combinations = model_combinations * simulator_combinations\n",
+    "    print(f'Total combinations: {total_combinations}')\n",
+    "    \n",
+    "    svc_classifiers = generate_svc_classifiers(model_param_grid)\n",
+    "\n",
+    "    data_df = main(amount_data_df=amount_data_df, models_name='check_grid', merged_train_df=merged_train_df,\n",
+    "                           clfs=svc_classifiers, threshold_list=simulator_param_grid['threshold'], cols_to_leave=cols_to_leave,\n",
+    "                           bet_size_list=simulator_param_grid['bet_size'], min_multiplier_list=simulator_param_grid['min_multiplier'])\n",
+    "\n",
+    "    return data_df\n",
+    "    \n",
+    "model_param_grid = {'C': [0.1, 1, 10, 100, 1000],  \n",
+    "                    'gamma': [100, 10, 1, 0.1, 0.01], \n",
+    "                    'kernel': ['rbf', 'linear']}\n",
+    "\n",
+    "simulator_param_grid = {'bet_size': [1, 2, 3],  \n",
+    "                        'min_multiplier': [1.0, 1.1, 1.2, 1.3, 1.5], \n",
+    "                        'threshold': [0.6, 0.7, 0.8, 0.9]}\n",
+    "\n",
+    "\n",
+    "\n",
+    "grid_results = check_grid(model_param_grid, simulator_param_grid, feature_set9_merged_train_df, feature_set9, merged_train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the results based on the profit\n",
+    "grid_results.sort_values(by='profit', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the results based on the accuracy_above_threshold\n",
+    "grid_results.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the results based on the total_accuracy\n",
+    "grid_results.sort_values(by='total_accuracy', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the results based on the total_f1_score\n",
+    "grid_results.sort_values(by='total_f1_score', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
