--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1690,6 +1690,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pytorch neural network model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the separated datasets this time\n",
+    "feature_set9_train_df\n",
+    "feature_set9_validate_df\n",
+    "feature_set9_test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import tensor\n",
+    "\n",
+    "# Prepare the data\n",
+    "X_train, y_train = feature_set9_train_df.drop([\"position\"], axis=1), feature_set9_train_df[\"position\"]\n",
+    "X_test, y_test = feature_set9_validate_df.drop([\"position\"], axis=1), feature_set9_validate_df[\"position\"]\n",
+    "\n",
+    "X_train, y_train = tensor(X_train.values), tensor(y_train.values)\n",
+    "X_test, y_test = tensor(X_test.values), tensor(y_test.values)\n",
+    "\n",
+    "X_train = X_train.to(torch.float32)\n",
+    "y_train = y_train.to(torch.float32)\n",
+    "X_test = X_test.to(torch.float32)\n",
+    "y_test = y_test.to(torch.float32)\n",
+    "\n",
+    "y_train = y_train.view(-1, 1)\n",
+    "y_test = y_test.view(-1, 1)\n",
+    "\n",
+    "input_size = 6\n",
+    "output_size = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "def get_device():\n",
+    "    if torch.cuda.is_available():\n",
+    "        device = torch.device('cuda:0')\n",
+    "    else:\n",
+    "        device = torch.device('cpu') # don't have GPU \n",
+    "    return device\n",
+    "\n",
+    "class TwoLayerNet(nn.Module):\n",
+    "    def __init__(self, input_size, output_size):\n",
+    "        super(TwoLayerNet, self).__init__()\n",
+    "        # Define the first layer\n",
+    "        self.layer1 = nn.Linear(input_size, 4)\n",
+    "        # Define the second layer\n",
+    "        self.layer2 = nn.Linear(4, 4)\n",
+    "        # Define the output layer\n",
+    "        self.output_layer = nn.Linear(4, output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # Forward pass through the first layer\n",
+    "        x = F.relu(self.layer1(x))\n",
+    "        # Forward pass through the second layer\n",
+    "        x = F.relu(self.layer2(x))\n",
+    "        # Forward pass through the output layer\n",
+    "        x = self.output_layer(x)\n",
+    "\n",
+    "        x = torch.sigmoid(x)\n",
+    "        return x\n",
+    "\n",
+    "model = TwoLayerNet(input_size, output_size)\n",
+    "\n",
+    "device = get_device()\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Create loss function\n",
+    "loss_fn = nn.BCELoss()\n",
+    "\n",
+    "# Create optimizer\n",
+    "optimizer = torch.optim.SGD(params=model.parameters(), # optimize newly created model's parameters\n",
+    "                            lr=0.01)\n",
+    "\n",
+    "torch.manual_seed(98)\n",
+    "\n",
+    "# Set the number of epochs \n",
+    "epochs = 10000\n",
+    "\n",
+    "### Batch training\n",
+    "# Convert data to TensorDataset\n",
+    "train_dataset = TensorDataset(X_train, y_train)\n",
+    "test_dataset = TensorDataset(X_test, y_test)\n",
+    "\n",
+    "# Define batch size\n",
+    "batch_size = 64  # You can adjust this size\n",
+    "\n",
+    "# Create DataLoaders\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size)\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    ### Training\n",
+    "    model.train() # train mode is on by default after construction\n",
+    "\n",
+    "    total_train_loss = 0\n",
+    "    for X_batch, y_batch in train_loader:\n",
+    "        # Move batch to the appropriate device\n",
+    "        X_batch = X_batch.to(device)\n",
+    "        y_batch = y_batch.to(device)\n",
+    "\n",
+    "        # Forward pass\n",
+    "        y_pred = model(X_batch)\n",
+    "\n",
+    "        # Calculate loss\n",
+    "        loss = loss_fn(y_pred, y_batch)\n",
+    "\n",
+    "        # Backward pass and optimize\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        total_train_loss += loss.item()\n",
+    "\n",
+    "    # Evaluation loop\n",
+    "    model.eval()\n",
+    "    total_test_loss = 0\n",
+    "    with torch.inference_mode():\n",
+    "        for X_batch, y_batch in test_loader:\n",
+    "            X_batch = X_batch.to(device)\n",
+    "            y_batch = y_batch.to(device)\n",
+    "\n",
+    "            test_pred = model(X_batch)\n",
+    "            test_loss = loss_fn(test_pred, y_batch)\n",
+    "            total_test_loss += test_loss.item()\n",
+    "\n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"Epoch: {epoch} | Train loss: {total_train_loss / len(train_loader)} | Test loss: {total_test_loss / len(test_loader)}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
