--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1714,14 +1714,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch import tensor\n",
+    "import torch\n",
     "\n",
     "# Prepare the data\n",
     "X_train, y_train = feature_set9_train_df.drop([\"position\"], axis=1), feature_set9_train_df[\"position\"]\n",
     "X_test, y_test = feature_set9_validate_df.drop([\"position\"], axis=1), feature_set9_validate_df[\"position\"]\n",
     "\n",
-    "X_train, y_train = tensor(X_train.values), tensor(y_train.values)\n",
-    "X_test, y_test = tensor(X_test.values), tensor(y_test.values)\n",
+    "X_train, y_train = torch.tensor(X_train.values), torch.tensor(y_train.values)\n",
+    "X_test, y_test = torch.tensor(X_test.values), torch.tensor(y_test.values)\n",
     "\n",
     "X_train = X_train.to(torch.float32)\n",
     "y_train = y_train.to(torch.float32)\n",
@@ -1742,7 +1742,10 @@
    "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
+    "from torch import nn\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from IPython.display import clear_output\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def get_device():\n",
     "    if torch.cuda.is_available():\n",
@@ -1755,11 +1758,11 @@
     "    def __init__(self, input_size, output_size):\n",
     "        super(TwoLayerNet, self).__init__()\n",
     "        # Define the first layer\n",
-    "        self.layer1 = nn.Linear(input_size, 4)\n",
+    "        self.layer1 = nn.Linear(input_size, 16)\n",
     "        # Define the second layer\n",
-    "        self.layer2 = nn.Linear(4, 4)\n",
+    "        self.layer2 = nn.Linear(16, 16)\n",
     "        # Define the output layer\n",
-    "        self.output_layer = nn.Linear(4, output_size)\n",
+    "        self.output_layer = nn.Linear(16, output_size)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # Forward pass through the first layer\n",
@@ -1781,12 +1784,10 @@
     "loss_fn = nn.BCELoss()\n",
     "\n",
     "# Create optimizer\n",
-    "optimizer = torch.optim.SGD(params=model.parameters(), # optimize newly created model's parameters\n",
-    "                            lr=0.01)\n",
+    "optimizer = torch.optim.SGD(params=model.parameters(), lr=0.01)\n",
     "\n",
     "torch.manual_seed(98)\n",
     "\n",
-    "# Set the number of epochs \n",
     "epochs = 10000\n",
     "\n",
     "### Batch training\n",
@@ -1794,12 +1795,18 @@
     "train_dataset = TensorDataset(X_train, y_train)\n",
     "test_dataset = TensorDataset(X_test, y_test)\n",
     "\n",
-    "# Define batch size\n",
-    "batch_size = 64  # You can adjust this size\n",
+    "batch_size = 64\n",
     "\n",
     "# Create DataLoaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size)\n",
+    "\n",
+    "# Initialize two lists to store train and test losses\n",
+    "train_losses = []\n",
+    "test_losses = []\n",
+    "\n",
+    "# Set up real-time plotting\n",
+    "plt.ion()\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    ### Training\n",
@@ -1836,8 +1843,24 @@
     "            test_loss = loss_fn(test_pred, y_batch)\n",
     "            total_test_loss += test_loss.item()\n",
     "\n",
+    "    # Update the lists\n",
+    "    train_losses.append(total_train_loss / len(train_loader))\n",
+    "    test_losses.append(total_test_loss / len(test_loader))\n",
+    "\n",
     "    if epoch % 100 == 0:\n",
-    "        print(f\"Epoch: {epoch} | Train loss: {total_train_loss / len(train_loader)} | Test loss: {total_test_loss / len(test_loader)}\")"
+    "        # print(f\"Epoch: {epoch} | Train loss: {total_train_loss / len(train_loader)} | Test loss: {total_test_loss / len(test_loader)}\")\n",
+    "\n",
+    "        clear_output(wait=True)\n",
+    "        plt.figure(figsize=(10, 5))\n",
+    "        plt.plot(train_losses, label='Train Loss')\n",
+    "        plt.plot(test_losses, label='Test Loss')\n",
+    "        plt.title(f\"Epoch {epoch}\")\n",
+    "        plt.xlabel('Epochs')\n",
+    "        plt.ylabel('Loss')\n",
+    "        plt.legend()\n",
+    "        plt.show()\n",
+    "        \n",
+    "plt.ioff()"
    ]
   },
   {
