Notebook: Refactor "Pytorch neural network model"

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1697,6 +1697,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just a template now, to be continued"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1716,20 +1723,24 @@
    "source": [
     "import torch\n",
     "\n",
-    "# Prepare the data\n",
-    "X_train, y_train = feature_set9_train_df.drop([\"position\"], axis=1), feature_set9_train_df[\"position\"]\n",
-    "X_test, y_test = feature_set9_validate_df.drop([\"position\"], axis=1), feature_set9_validate_df[\"position\"]\n",
+    "def prepare_pytorch_data(train_df, test_df)\n",
+    "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
+    "    X_test, y_test = test_df.drop([\"position\"], axis=1), test_df[\"position\"]\n",
+    "    \n",
+    "    X_train, y_train = torch.tensor(X_train.values), torch.tensor(y_train.values)\n",
+    "    X_test, y_test = torch.tensor(X_test.values), torch.tensor(y_test.values)\n",
+    "    \n",
+    "    X_train = X_train.to(torch.float32)\n",
+    "    y_train = y_train.to(torch.float32)\n",
+    "    X_test = X_test.to(torch.float32)\n",
+    "    y_test = y_test.to(torch.float32)\n",
+    "    \n",
+    "    y_train = y_train.view(-1, 1)\n",
+    "    y_test = y_test.view(-1, 1)\n",
     "\n",
-    "X_train, y_train = torch.tensor(X_train.values), torch.tensor(y_train.values)\n",
-    "X_test, y_test = torch.tensor(X_test.values), torch.tensor(y_test.values)\n",
+    "    return X_train, y_train, X_test, y_test\n",
     "\n",
-    "X_train = X_train.to(torch.float32)\n",
-    "y_train = y_train.to(torch.float32)\n",
-    "X_test = X_test.to(torch.float32)\n",
-    "y_test = y_test.to(torch.float32)\n",
-    "\n",
-    "y_train = y_train.view(-1, 1)\n",
-    "y_test = y_test.view(-1, 1)\n",
+    "X_train, y_train, X_test, y_test = prepare_pytorch_data(feature_set9_train_df, feature_set9_validate_df)\n",
     "\n",
     "input_size = 6\n",
     "output_size = 1"
@@ -1751,7 +1762,7 @@
     "    if torch.cuda.is_available():\n",
     "        device = torch.device('cuda:0')\n",
     "    else:\n",
-    "        device = torch.device('cpu') # don't have GPU \n",
+    "        device = torch.device('cpu')\n",
     "    return device\n",
     "\n",
     "class TwoLayerNet(nn.Module):\n",
@@ -1775,10 +1786,87 @@
     "        x = torch.sigmoid(x)\n",
     "        return x\n",
     "\n",
-    "model = TwoLayerNet(input_size, output_size)\n",
+    "def pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset):\n",
     "\n",
-    "device = get_device()\n",
-    "model = model.to(device)\n",
+    "    device = get_device()\n",
+    "    model = model.to(device)\n",
+    "\n",
+    "    # Create DataLoaders\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "    test_loader = DataLoader(test_dataset, batch_size=batch_size)\n",
+    "\n",
+    "    # Initialize two lists to store train and test losses\n",
+    "    train_losses = []\n",
+    "    test_losses = []\n",
+    "    \n",
+    "    # Set up real-time plotting\n",
+    "    plt.ion()\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        ### Training\n",
+    "        model.train() # train mode is on by default after construction\n",
+    "    \n",
+    "        total_train_loss = 0\n",
+    "        for X_batch, y_batch in train_loader:\n",
+    "            # Move batch to the appropriate device\n",
+    "            X_batch = X_batch.to(device)\n",
+    "            y_batch = y_batch.to(device)\n",
+    "    \n",
+    "            # Forward pass\n",
+    "            y_pred = model(X_batch)\n",
+    "    \n",
+    "            # Calculate loss\n",
+    "            loss = loss_fn(y_pred, y_batch)\n",
+    "    \n",
+    "            # Backward pass and optimize\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "    \n",
+    "            total_train_loss += loss.item()\n",
+    "    \n",
+    "        # Evaluation loop\n",
+    "        model.eval()\n",
+    "        total_test_loss = 0\n",
+    "        with torch.inference_mode():\n",
+    "            for X_batch, y_batch in test_loader:\n",
+    "                X_batch = X_batch.to(device)\n",
+    "                y_batch = y_batch.to(device)\n",
+    "    \n",
+    "                test_pred = model(X_batch)\n",
+    "                test_loss = loss_fn(test_pred, y_batch)\n",
+    "                total_test_loss += test_loss.item()\n",
+    "    \n",
+    "        # Update the lists\n",
+    "        train_losses.append(total_train_loss / len(train_loader))\n",
+    "        test_losses.append(total_test_loss / len(test_loader))\n",
+    "    \n",
+    "        if epoch % 100 == 0:\n",
+    "            # print(f\"Epoch: {epoch} | Train loss: {total_train_loss / len(train_loader)} | Test loss: {total_test_loss / len(test_loader)}\")\n",
+    "    \n",
+    "            clear_output(wait=True)\n",
+    "            plt.figure(figsize=(10, 5))\n",
+    "            plt.plot(train_losses, label='Train Loss')\n",
+    "            plt.plot(test_losses, label='Test Loss')\n",
+    "            plt.title(f\"Epoch {epoch}\")\n",
+    "            plt.xlabel('Epochs')\n",
+    "            plt.ylabel('Loss')\n",
+    "            plt.legend()\n",
+    "            plt.show()\n",
+    "            \n",
+    "    plt.ioff()\n",
+    "    \n",
+    "    # Save the model\n",
+    "    torch.save(model.state_dict(), '../models/pytorch')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = TwoLayerNet(input_size, output_size)\n",
     "\n",
     "# Create loss function\n",
     "loss_fn = nn.BCELoss()\n",
@@ -1788,6 +1876,8 @@
     "\n",
     "torch.manual_seed(98)\n",
     "\n",
+    "batch_size = 64\n",
+    "\n",
     "epochs = 10000\n",
     "\n",
     "### Batch training\n",
@@ -1795,72 +1885,7 @@
     "train_dataset = TensorDataset(X_train, y_train)\n",
     "test_dataset = TensorDataset(X_test, y_test)\n",
     "\n",
-    "batch_size = 64\n",
-    "\n",
-    "# Create DataLoaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=batch_size)\n",
-    "\n",
-    "# Initialize two lists to store train and test losses\n",
-    "train_losses = []\n",
-    "test_losses = []\n",
-    "\n",
-    "# Set up real-time plotting\n",
-    "plt.ion()\n",
-    "\n",
-    "for epoch in range(epochs):\n",
-    "    ### Training\n",
-    "    model.train() # train mode is on by default after construction\n",
-    "\n",
-    "    total_train_loss = 0\n",
-    "    for X_batch, y_batch in train_loader:\n",
-    "        # Move batch to the appropriate device\n",
-    "        X_batch = X_batch.to(device)\n",
-    "        y_batch = y_batch.to(device)\n",
-    "\n",
-    "        # Forward pass\n",
-    "        y_pred = model(X_batch)\n",
-    "\n",
-    "        # Calculate loss\n",
-    "        loss = loss_fn(y_pred, y_batch)\n",
-    "\n",
-    "        # Backward pass and optimize\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        total_train_loss += loss.item()\n",
-    "\n",
-    "    # Evaluation loop\n",
-    "    model.eval()\n",
-    "    total_test_loss = 0\n",
-    "    with torch.inference_mode():\n",
-    "        for X_batch, y_batch in test_loader:\n",
-    "            X_batch = X_batch.to(device)\n",
-    "            y_batch = y_batch.to(device)\n",
-    "\n",
-    "            test_pred = model(X_batch)\n",
-    "            test_loss = loss_fn(test_pred, y_batch)\n",
-    "            total_test_loss += test_loss.item()\n",
-    "\n",
-    "    # Update the lists\n",
-    "    train_losses.append(total_train_loss / len(train_loader))\n",
-    "    test_losses.append(total_test_loss / len(test_loader))\n",
-    "\n",
-    "    if epoch % 100 == 0:\n",
-    "        # print(f\"Epoch: {epoch} | Train loss: {total_train_loss / len(train_loader)} | Test loss: {total_test_loss / len(test_loader)}\")\n",
-    "\n",
-    "        clear_output(wait=True)\n",
-    "        plt.figure(figsize=(10, 5))\n",
-    "        plt.plot(train_losses, label='Train Loss')\n",
-    "        plt.plot(test_losses, label='Test Loss')\n",
-    "        plt.title(f\"Epoch {epoch}\")\n",
-    "        plt.xlabel('Epochs')\n",
-    "        plt.ylabel('Loss')\n",
-    "        plt.legend()\n",
-    "        plt.show()\n",
-    "        \n",
-    "plt.ioff()"
+    "pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset)"
    ]
   },
   {
