Notebook: Refactor "Pytorch neural network model"

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1700,6 +1700,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If we treat the problem as binary classification we should use BCELoss - the prediction can be only Bear or Bull. We can also make the problem multi-label classification (output=2) with probability for each class at output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic ideas for pytoch NN architectures:\n",
+    "- simple 2,3 or 4 layer nets\n",
+    "- check different activation functions\n",
+    "- check different output: sigmoid !!\n",
+    "- check optimizers (SGD, Adam)\n",
+    "- loss function: BCELoss for binary classification, !!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Just a template now, to be continued"
    ]
   },
@@ -1723,7 +1742,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "def prepare_pytorch_data(train_df, test_df)\n",
+    "def prepare_pytorch_data(train_df, test_df):\n",
     "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "    X_test, y_test = test_df.drop([\"position\"], axis=1), test_df[\"position\"]\n",
     "    \n",
@@ -1738,12 +1757,7 @@
     "    y_train = y_train.view(-1, 1)\n",
     "    y_test = y_test.view(-1, 1)\n",
     "\n",
-    "    return X_train, y_train, X_test, y_test\n",
-    "\n",
-    "X_train, y_train, X_test, y_test = prepare_pytorch_data(feature_set9_train_df, feature_set9_validate_df)\n",
-    "\n",
-    "input_size = 6\n",
-    "output_size = 1"
+    "    return X_train, y_train, X_test, y_test"
    ]
   },
   {
@@ -1768,22 +1782,18 @@
     "class TwoLayerNet(nn.Module):\n",
     "    def __init__(self, input_size, output_size):\n",
     "        super(TwoLayerNet, self).__init__()\n",
-    "        # Define the first layer\n",
     "        self.layer1 = nn.Linear(input_size, 16)\n",
-    "        # Define the second layer\n",
+    "        self.relu1 = nn.ReLU()\n",
     "        self.layer2 = nn.Linear(16, 16)\n",
-    "        # Define the output layer\n",
+    "        self.relu2 = nn.ReLU()\n",
     "        self.output_layer = nn.Linear(16, output_size)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # Forward pass through the first layer\n",
-    "        x = F.relu(self.layer1(x))\n",
-    "        # Forward pass through the second layer\n",
-    "        x = F.relu(self.layer2(x))\n",
-    "        # Forward pass through the output layer\n",
+    "        x = self.relu1(self.layer1(x))\n",
+    "        x = self.relu2(self.layer2(x))\n",
     "        x = self.output_layer(x)\n",
-    "\n",
     "        x = torch.sigmoid(x)\n",
+    "        \n",
     "        return x\n",
     "\n",
     "def pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset):\n",
@@ -1866,17 +1876,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "X_train, y_train, X_test, y_test = prepare_pytorch_data(feature_set9_train_df, feature_set9_validate_df)\n",
+    "\n",
+    "input_size = 6\n",
+    "output_size = 1\n",
+    "\n",
     "model = TwoLayerNet(input_size, output_size)\n",
     "\n",
     "# Create loss function\n",
     "loss_fn = nn.BCELoss()\n",
     "\n",
     "# Create optimizer\n",
-    "optimizer = torch.optim.SGD(params=model.parameters(), lr=0.01)\n",
+    "optimizer = torch.optim.SGD(params=model.parameters(), lr=0.005)\n",
     "\n",
     "torch.manual_seed(98)\n",
     "\n",
-    "batch_size = 64\n",
+    "batch_size = 16\n",
     "\n",
     "epochs = 10000\n",
     "\n",
