Notebook: Fix saving the Pytorch model

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1693,7 +1693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pytorch neural network model"
+    "## Pytorch neural network model (To be continued)"
    ]
   },
   {
@@ -1796,7 +1796,7 @@
     "        \n",
     "        return x\n",
     "\n",
-    "def pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset):\n",
+    "def pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset, model_name='pytorch_model.pt'):\n",
     "\n",
     "    device = get_device()\n",
     "    model = model.to(device)\n",
@@ -1867,7 +1867,7 @@
     "    plt.ioff()\n",
     "    \n",
     "    # Save the model\n",
-    "    torch.save(model.state_dict(), '../models/pytorch')"
+    "    torch.save(model.state_dict(), f'../models/pytorch/{model_name}')"
    ]
   },
   {
