Notebook: Add feature to use the pytorch model to predict

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1796,7 +1796,7 @@
     "        \n",
     "        return x\n",
     "\n",
-    "def pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset, model_name='pytorch_model.pt'):\n",
+    "def pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset, model_name='pytorch_model.pt', chart=False):\n",
     "\n",
     "    device = get_device()\n",
     "    model = model.to(device)\n",
@@ -1851,7 +1851,7 @@
     "        train_losses.append(total_train_loss / len(train_loader))\n",
     "        test_losses.append(total_test_loss / len(test_loader))\n",
     "    \n",
-    "        if epoch % 100 == 0:\n",
+    "        if epoch % 10 == 0 and chart:\n",
     "            # print(f\"Epoch: {epoch} | Train loss: {total_train_loss / len(train_loader)} | Test loss: {total_test_loss / len(test_loader)}\")\n",
     "    \n",
     "            clear_output(wait=True)\n",
@@ -1867,7 +1867,10 @@
     "    plt.ioff()\n",
     "    \n",
     "    # Save the model\n",
-    "    torch.save(model.state_dict(), f'../models/pytorch/{model_name}')"
+    "    torch.save(model.state_dict(), f'../models/pytorch/{model_name}')\n",
+    "\n",
+    "    return train_losses, test_losses\n",
+    "    "
    ]
   },
   {
@@ -1887,20 +1890,65 @@
     "loss_fn = nn.BCELoss()\n",
     "\n",
     "# Create optimizer\n",
-    "optimizer = torch.optim.SGD(params=model.parameters(), lr=0.005)\n",
+    "optimizer = torch.optim.Adam(params=model.parameters(), lr=0.0001)\n",
     "\n",
     "torch.manual_seed(98)\n",
     "\n",
     "batch_size = 16\n",
     "\n",
-    "epochs = 10000\n",
+    "epochs = 300\n",
     "\n",
     "### Batch training\n",
     "# Convert data to TensorDataset\n",
     "train_dataset = TensorDataset(X_train, y_train)\n",
     "test_dataset = TensorDataset(X_test, y_test)\n",
     "\n",
-    "pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset)"
+    "pytorch_loop(model, optimizer, loss_fn, epochs, train_dataset, test_dataset, chart=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make predictions using the pytorch model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pytorch_predict(model, path, data_df):\n",
+    "    # Load the model state\n",
+    "    model.load_state_dict(torch.load(path))\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
+    "\n",
+    "    X = data_df.drop([\"position\"], axis=1)   \n",
+    "    X = torch.tensor(X.values)\n",
+    "    \n",
+    "    X = X.to(torch.float32)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(X)\n",
+    "\n",
+    "    # Use torch.max to get the predicted labels\n",
+    "    _, predicted_labels = torch.max(outputs, 1)\n",
+    "\n",
+    "    return predicted_labels.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "y_test = feature_set9_test_df[\"position\"]\n",
+    "predicted_labels = pytorch_predict(model, f'../models/pytorch/pytorch_model.pt', feature_set9_test_df)\n",
+    "predicted_labels"
    ]
   },
   {
