--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1929,13 +1929,16 @@
     "    \n",
     "    X = X.to(torch.float32)\n",
     "\n",
-    "    with torch.no_grad():\n",
+    "    # Evaluation loop\n",
+    "    model.eval()\n",
+    "    total_test_loss = 0\n",
+    "    with torch.inference_mode():\n",
     "        outputs = model(X)\n",
     "\n",
     "    # Use torch.max to get the predicted labels\n",
-    "    _, predicted_labels = torch.max(outputs, 1)\n",
+    "    # _, predicted_labels = torch.max(outputs, 1)\n",
     "\n",
-    "    return predicted_labels.tolist()"
+    "    return outputs.numpy()"
    ]
   },
   {
@@ -1946,9 +1949,53 @@
    },
    "outputs": [],
    "source": [
+    "predicted_labels = pytorch_predict(model, f'../models/pytorch/pytorch_model.pt', feature_set9_test_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A dataframe with the predicted labels as well as the true ones will be created:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y_test = feature_set9_test_df[\"position\"]\n",
-    "predicted_labels = pytorch_predict(model, f'../models/pytorch/pytorch_model.pt', feature_set9_test_df)\n",
-    "predicted_labels"
+    "y_test = y_test.to_frame()\n",
+    "y_test['prediction_prob'] = predicted_labels\n",
+    "\n",
+    "y_test['prediction'] = np.where(y_test['prediction_prob'] < 0.5, 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's calculate the overall accuracy of the model, assuming the threshold level at 0.5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = (y_test['position'] == y_test['prediction']).mean()\n",
+    "accuracy"
    ]
   },
   {
