Notebook: Add skorch wrapper

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1016,10 +1016,15 @@
     "import pickle\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from skorch.classifier import NeuralNetBinaryClassifier\n",
     "\n",
     "def run(k, models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=1, min_multiplier=0):\n",
     "    # Check if the model already exists\n",
-    "    model_name = f\"{models_name}_{str(clf)}_k{k}.pkl\"\n",
+    "    if isinstance(clf, NeuralNetBinaryClassifier):\n",
+    "        model_name = f\"{models_name}_pytorch_k{k}.pkl\"\n",
+    "    else:\n",
+    "        model_name = f\"{models_name}_{str(clf)}_k{k}.pkl\"\n",
+    "\n",
     "    model_dir = f\"../models/{model_name}\"\n",
     "\n",
     "    if os.path.exists(model_dir):\n",
@@ -1028,12 +1033,21 @@
     "            clf = pickle.load(f)\n",
     "    else:\n",
     "        print(f\"Training the model {clf}\")\n",
-    "        clf.fit(x_train, y_train)\n",
-    "    clf.fit(x_train, y_train)\n",
-    "\n",
-    "    total_accuracy = clf.score(x_test, y_test)\n",
-    "\n",
-    "    predicted_probability = clf.predict_proba(x_test)\n",
+    "        if isinstance(clf, NeuralNetBinaryClassifier):\n",
+    "            clf.fit(torch.tensor(x_train.values, dtype=torch.float32), torch.tensor(y_train.values, dtype=torch.float32))\n",
+    "        else:\n",
+    "            clf.fit(x_train, y_train)\n",
+    "            \n",
+    "    if isinstance(clf, NeuralNetBinaryClassifier):\n",
+    "        total_accuracy = clf.score(torch.tensor(x_test.values, dtype=torch.float32), torch.tensor(y_test.values, dtype=torch.float32))\n",
+    "        predicted_probability = clf.predict_proba(torch.tensor(x_test.values, dtype=torch.float32))\n",
+    "    else:\n",
+    "        total_accuracy = clf.score(x_test, y_test)\n",
+    "        predicted_probability = clf.predict_proba(x_test)\n",
+    "        \n",
+    "    print(f\"total_accuracy: {total_accuracy}\")\n",
+    "    \n",
+    "    print(f\"predicted_probability: {predicted_probability}\")\n",
     "\n",
     "    # Create a df to compare the predicted_probability with the real y_test\n",
     "    df = pd.DataFrame(predicted_probability, columns=[\"Bear\", \"Bull\"], index=y_test.index)\n",
@@ -1787,12 +1801,12 @@
     "        self.layer2 = nn.Linear(16, 16)\n",
     "        self.relu2 = nn.ReLU()\n",
     "        self.output_layer = nn.Linear(16, output_size)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.relu1(self.layer1(x))\n",
     "        x = self.relu2(self.layer2(x))\n",
-    "        x = self.output_layer(x)\n",
-    "        x = torch.sigmoid(x)\n",
+    "        x = self.sigmoid(self.output_layer(x))\n",
     "        \n",
     "        return x\n",
     "\n",
@@ -1996,6 +2010,51 @@
    "source": [
     "accuracy = (y_test['position'] == y_test['prediction']).mean()\n",
     "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using skorch to load custom Pytorch NN into sklearn workflow\n",
+    "Using skorch will make it possible to reuse most of the code used previously to train and test sklearn classifiers. We just have to use a wrapper on the Pytorch class. It was necessary to update the code in the section \"Testing the scikit-learn models\" to use pytorch tensors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skorch import NeuralNetBinaryClassifier\n",
+    "\n",
+    "pytorch_model = NeuralNetBinaryClassifier(\n",
+    "                TwoLayerNet(input_size, output_size),\n",
+    "                criterion=torch.nn.BCEWithLogitsLoss,\n",
+    "                optimizer=torch.optim.Adam,\n",
+    "                lr=0.0001,\n",
+    "                max_epochs=epochs,\n",
+    "                batch_size=batch_size\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_pytorch1_df = main(amount_data_df=merged_train_df, models_name='experiment_pytorch1', merged_train_df=feature_set9_merged_train_df,\n",
+    "                       clfs=[pytorch_model], threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_pytorch1_df"
    ]
   },
   {
